@@ -3,45 +3,24 @@
 
 conditional_include "common"
 
-// If there are more than two compilers,
-// then the template needs to be modified to support that
-compilers      = cbx bcc
 configurations = Debug Release
 common_defines = WIN32 _WINDOWS
 common_libs    = import32$(LIB_EXT) cw32mti.lib ws2_32.lib
 common_flags   = -a8
 unicode_flags  = -WU
 
-bcc {
-  obj_ext = .obj
-  dll_ext = .dll
-  lib_ext = .lib
-  exe_ext = .exe
-  cc      = bcc32
-  rc      = brcc32
-  tlib    = tlib
-  link    = ilink32
-  thflags = -tWM
-  dllflags = -Tpd -Gi -x -Gn -w-dup
-  libflags = /C
-  ccflags  = -q
-  exeflags = -Tpe -x -Gn
-  warnflags = -w-rvl -w-rch -w-ccc -w-obs -w-aus -w-pia -w-inl
-}
+obj_ext = .obj
+dll_ext = .dll
+lib_ext = .lib
+exe_ext = .exe
+cc      = bcc32
+rc      = brcc32
+tlib    = tlib
+link    = ilink32
+thflags = -tWM
+dllflags = -Tpd -Gi -x -Gn -w-dup
+libflags = /C
+ccflags  = -q
+exeflags = -Tpe -x -Gn
+warnflags = -w-rvl -w-rch -w-ccc -w-obs -w-aus -w-pia -w-inl
 
-cbx {
-  obj_ext   = .o
-  dll_ext   = .dll
-  lib_ext   = .a
-  exe_ext   = .exe
-  cc        = bccx
-  rc        = brcc32
-  tlib      = ar
-  link      = ilink
-  thflags   = -tWM
-  dllflags  = -Tpd -Gi -x -Gn -w-dup
-  libflags  = cfrv
-  ccflags   = -b
-  exeflags  = -Tpe -x -Gn
-  warnflags = -w-rvl -w-rch -w-ccc -w-obs -w-aus -w-pia -w-inl
-}
